--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -114,7 +114,10 @@ iree_compiler_cc_library(
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
         "HoistUnrolledVectorExtractInsertSlice.cpp",
+        "IREECodegenAffineExpandIndexOps.cpp",
         "IREECodegenCanonicalizer.cpp",
+        "IREECodegenFoldMemRefAliasOps.cpp",
+        "IREECodegenLowerAffine.cpp",
         "IREEComprehensiveBufferizePass.cpp",
         "IREEExpandStridedMetadata.cpp",
         "IREEInjectAssumeAlignment.cpp",
@@ -222,6 +225,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:AMDGPUUtils",
         "@llvm-project//mlir:AffineAnalysis",
         "@llvm-project//mlir:AffineDialect",
+        "@llvm-project//mlir:AffineToStandard",
         "@llvm-project//mlir:AffineTransforms",
         "@llvm-project//mlir:AffineUtils",
         "@llvm-project//mlir:Analysis",
