--- a/.github/workflows/ci_linux_x64_clang.yml
+++ b/.github/workflows/ci_linux_x64_clang.yml
@@ -31,29 +31,10 @@ jobs:
           submodules: true
       - name: Install Python requirements
         run: python3 -m pip install -r ./runtime/bindings/python/iree/runtime/build_requirements.txt
-      - name: CMake - configure
+      - name: Build IREE
         run: |
           source ./build_tools/cmake/setup_sccache.sh
-          cmake \
-            -G Ninja \
-            -B ${BUILD_DIR} \
-            -DPython3_EXECUTABLE="$(which python3)" \
-            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-            -DIREE_BUILD_PYTHON_BINDINGS=ON \
-            -DIREE_ENABLE_LLD=ON \
-            -DIREE_ENABLE_ASSERTIONS=ON \
-            -DIREE_ENABLE_SPLIT_DWARF=ON \
-            -DIREE_ENABLE_THIN_ARCHIVES=ON \
-            -DIREE_BUILD_DOCS=ON \
-            -DIREE_TARGET_BACKEND_CUDA=ON \
-            -DIREE_TARGET_BACKEND_ROCM=ON \
-            -DIREE_TARGET_BACKEND_WEBGPU_SPIRV=ON
-      - name: CMake - build
-        run: |
-          cmake --build ${BUILD_DIR} -- -k 0
-          cmake --build ${BUILD_DIR} --target install -- -k 0
-          cmake --build ${BUILD_DIR} --target iree-test-deps -- -k 0
-          sccache --show-stats
+          ./build_tools/cmake/build_all.sh "${BUILD_DIR}"
       - name: Run CTest
         run: ./build_tools/cmake/ctest_all.sh "${BUILD_DIR}"
         env:
