[CI] Allow macos checks to be triggered with ci-extra
This makes it easier to see if these are working, without having to push
changes to a branch under iree-org/iree. We already have support for
this for windows_x64_msvc and torch_ops.

ci-extra: macos_arm64_clang, macos_x64_clang

--- a/.github/workflows/ci_macos_arm64_clang.yml
+++ b/.github/workflows/ci_macos_arm64_clang.yml
@@ -10,6 +10,7 @@ on:
   schedule:
     # Weekday mornings at 09:15 UTC = 01:15 PST (UTC - 8).
     - cron: "15 9 * * 1-5"
+  workflow_call:
   workflow_dispatch:
 
 concurrency:
