--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,6 +247,18 @@ jobs:
     uses: ./.github/workflows/ci_linux_x64_clang_ubsan.yml
     secrets: inherit
 
+  macos_arm64_clang:
+    needs: setup
+    if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'macos_arm64_clang')
+    uses: ./.github/workflows/ci_macos_arm64_clang.yml
+    secrets: inherit
+
+  macos_x64_clang:
+    needs: setup
+    if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'macos_x64_clang')
+    uses: ./.github/workflows/ci_macos_x64_clang.yml
+    secrets: inherit
+
   windows_x64_msvc:
     needs: setup
     if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'windows_x64_msvc')
@@ -271,6 +283,8 @@ jobs:
       - linux_x64_clang
       - linux_x64_clang_asan
       - linux_x64_clang_ubsan
+      - macos_arm64_clang
+      - macos_x64_clang
       - windows_x64_msvc
     uses: ./.github/workflows/workflow_summary.yml
     secrets: inherit
