[LLVMGPU] Add pass to lower vector loads to amdgpu.transpose_load
Add ROCDLLoadToTransposeLoadPass that transforms vector.transfer_read
operations to amdgpu.transpose_load when the access pattern matches
the hardware requirements for AMD's transpose load instruction.

The transpose_load instruction (available on gfx950+) enables efficient
transposed reads from LDS memory, which is critical for matrix multiply
performance. Each 16-lane group cooperatively loads a tile where lanes
read consecutive columns but share the same row, effectively performing
a transpose during the load.

The pass uses iree_codegen.index_hint ops to identify valid patterns:
- Row indices must have lane_constant<16> hint (uniform within 16 lanes)
- Column index must have lane_increment<16> hint (consecutive across lanes)
- Memory must be workgroup (LDS) with contiguous row dimension
- Vector shape must be Nx1 with N matching the element type requirements

The pass also cleans up any index_hint ops that weren't consumed during
transformation, as these hints are purely advisory.

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
@@ -92,6 +92,7 @@ iree_cc_library(
     "ROCDLAnnotateKernelForTranslation.cpp"
     "ROCDLBufferInstructionsOptimization.cpp"
     "ROCDLConfigureBufferInstructions.cpp"
+    "ROCDLLoadToTransposeLoad.cpp"
     "ROCDLLowerExecutableTarget.cpp"
     "ROCDLPrefetching.cpp"
     "Verifiers.cpp"
