--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
@@ -113,6 +113,7 @@ iree_compiler_cc_library(
         "ROCDLAnnotateKernelForTranslation.cpp",
         "ROCDLBufferInstructionsOptimization.cpp",
         "ROCDLConfigureBufferInstructions.cpp",
+        "ROCDLLoadToTransposeLoad.cpp",
         "ROCDLLowerExecutableTarget.cpp",
         "ROCDLPrefetching.cpp",
         "Verifiers.cpp",
