--- a/.github/workflows/ci_linux_x64_gcc.yml
+++ b/.github/workflows/ci_linux_x64_gcc.yml
@@ -27,7 +27,7 @@ jobs:
   linux_x64_gcc:
     if: ${{ github.repository_owner == 'iree-org' || github.event_name != 'schedule' }}
     runs-on: ubuntu-24.04
-    container: ghcr.io/iree-org/cpubuilder_ubuntu_jammy@sha256:78a558b999b230f7e1da376639e14b44f095f30f1777d6a272ba48c0bbdd4ccb
+    container: ghcr.io/iree-org/cpubuilder_ubuntu_jammy@sha256:dfaf99be6f3adf3d7e404ca8e41e545f5353ab694037f627d2170f49f688504f
     defaults:
       run:
         shell: bash
@@ -40,8 +40,8 @@ jobs:
           submodules: true
       - name: "Building IREE with gcc"
         env:
-          CC: /usr/bin/gcc-9
-          CXX: /usr/bin/g++-9
+          CC: gcc-11
+          CXX: g++-11
           CMAKE_BUILD_TYPE: Release
           IREE_TARGET_BACKEND_WEBGPU_SPIRV: OFF
           IREE_BUILD_SETUP_PYTHON_VENV: ${{ env.BUILD_DIR }}/.venv
