--- a/.github/workflows/ci_linux_x64_clang_ubsan.yml
+++ b/.github/workflows/ci_linux_x64_clang_ubsan.yml
@@ -4,7 +4,7 @@
 # See https://llvm.org/LICENSE.txt for license information.
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-name: CI - Linux x64 clang UBSan
+name: CI - Linux x64 clang UBSan and Reverse Iteration
 
 on:
   workflow_call:
@@ -29,6 +29,9 @@ jobs:
           # Use a modern clang explicitly.
           CC: clang-19
           CXX: clang++-19
+          # Enable reverse iteration of unordered LLVM containers. This helps
+          # catch non-determinism bugs.
+          IREE_REVERSE_ITERATE: "ON"
           SCCACHE_AZURE_CONNECTION_STRING: "${{ secrets.AZURE_CCACHE_CONNECTION_STRING }}"
           SCCACHE_AZURE_BLOB_CONTAINER: ccache-container
           SCCACHE_CACHE_ZSTD_LEVEL: 10
