--- a/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
+++ b/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
@@ -15,6 +15,7 @@ iree_cc_library(
     DispatchCreation
   HDRS
     "FusionUtils.h"
+    "LoopMappingUtils.h"
     "Passes.h"
   SRCS
     "AnnotateDataTilingHints.cpp"
@@ -39,6 +40,7 @@ iree_cc_library(
     "HoistEncodingOps.cpp"
     "HoistUniformScalarCompute.cpp"
     "InsertTensorBarriers.cpp"
+    "LoopMappingUtils.cpp"
     "MaterializeDefaultWorkgroupCountRegion.cpp"
     "Passes.cpp"
     "PropagateEncodings.cpp"
