[Codegen] Enable fp8/fp4 software emulation for all GPU targets
Previously, using fp8 types on chips without hardware support would produce a compile error (e.g., f8E5M2 on gfx942 or f8E5M2FNUZ on gfx950).

This change enables software emulation as a fallback, allowing any small float type to be used on any chip.

Also marks arith.scaling_extf/truncf as legal since they have their own expansion patterns that run in later passes.

AMDGPU support matrix:

| Type         | gfx908/90a | gfx942 | gfx950 | gfx11xx | gfx12xx |
|--------------|------------|--------|--------|---------|---------|
| f8E4M3FNUZ   |   emu      |   hw   |  emu   |   emu   |   emu   |
| f8E5M2FNUZ   |   emu      |   hw   |  emu   |   emu   |   emu   |
| f8E4M3FN     |   emu      |  emu   |   hw   |   emu   |   hw    |
| f8E5M2       |   emu      |  emu   |   hw   |   emu   |   hw    |
| f4E2M1FN     |   emu      |  emu   |   hw   |   emu   |   hw    |

(hw = hardware instructions, emu = software emulation)

The revision also fixes a bug that gfx950 does not have FNUZ hardware
support. So `<=` is replaced with `<`.

The GPU specific tests are refreshed; all the executable target
attributes are removed from existing tests. Three of existing GPU tests
are removed because we already have the same tests.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -168,6 +168,7 @@ iree_check_single_backend_test_suite(
     "index.mlir"
     "narrow_n_matmuls.mlir"
     "pack_i8.mlir"
+    "small_float_arith.mlir"
     "softmax.mlir"
     "subbyte_to_fp.mlir"
     "unpack.mlir"
