Add lit tests for `iree-compile` flag option.
Signed-off-by: zjgarvey <zjgarvey@gmail.com>

--- a/compiler/plugins/input/Torch/InputConversion/test/CMakeLists.txt
+++ b/compiler/plugins/input/Torch/InputConversion/test/CMakeLists.txt
@@ -5,6 +5,7 @@ iree_lit_test_suite(
     "apply_pdl_patterns_torch.mlir"
     "assume_strict_symbols.mlir"
     "auto_input_conversion.mlir"
+    "auto_input_conversion_with_transients.mlir"
     "attention.mlir"
     "bind_symbolic_shapes.mlir"
     "bitcast_tensor.mlir"
