--- a/compiler/src/iree/compiler/ConstEval/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/ConstEval/test/BUILD.bazel
@@ -29,6 +29,7 @@ iree_lit_test_suite(
     cfg = "//compiler:lit.cfg.py",
     tools = [
         "//tools:iree-opt",
+        "@llvm-project//lld",
         "@llvm-project//llvm:FileCheck",
     ],
 )
