--- a/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/CMakeLists.txt
@@ -40,6 +40,7 @@ iree_cc_library(
     ::IREEVectorExtOpsGen
     LLVMSupport
     MLIRAffineDialect
+    MLIRControlFlowInterfaces
     MLIRIR
     MLIRMaskableOpInterface
     MLIRSideEffectInterfaces
